--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,62 @@
+/*Enlazar funetes locales descargadas(fontsquirrel)*/
+/*@font-face {
+    font-family: 'open_sansregular';
+    src: url('fuentes/OpenSans-Regular-webfont.eot');
+    src: url('fuentes/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fuentes/OpenSans-Regular-webfont.woff') format('woff'),
+         url('fuentes/OpenSans-Regular-webfont.ttf') format('truetype'),
+         url('fuentes/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}*/
+
+/*Enlazar icons-fonts locales descargados(icomoon.io)
+@font-face {
+	font-family: 'icomoon';
+	src:url('fuentes/icomoon.eot?5s0ze6');
+	src:url('fuentes/icomoon.eot?#iefix5s0ze6') format('embedded-opentype'),
+		url('fuentes/icomoon.woff?5s0ze6') format('woff'),
+		url('fuentes/icomoon.ttf?5s0ze6') format('truetype'),
+		url('fuentes/icomoon.svg?5s0ze6#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== 
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-f-arriba:before {
+	content: "\e600";
+}
+
+.icon-f-abajo:before {
+	content: "\e601";
+}
+
+.icon-estrella:before {
+	content: "\e602";
+}
+
+.icon-lapiz:before {
+	content: "\e905";
+}*/
+
+
+
+
+/*Diseño*/
 a
 {
 	color: #20BCE0;
@@ -5,7 +64,7 @@ a
 body
 {
 	background: #EEEEEE;
-	font-family: "Arial";
+	font-family: "Open Sans"; /*"open_sansregular"*/
 	font-size: 16px;
 }
 footer
