--- a/estilos.css
+++ b/estilos.css
@@ -11,14 +11,16 @@
 
 }*/
 
-/*Enlazar icons-fonts locales descargados(icomoon.io)
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:700,400);
+
+/*Enlazar icons-fonts locales descargados(icomoon.io)*/
 @font-face {
 	font-family: 'icomoon';
-	src:url('fuentes/icomoon.eot?5s0ze6');
-	src:url('fuentes/icomoon.eot?#iefix5s0ze6') format('embedded-opentype'),
-		url('fuentes/icomoon.woff?5s0ze6') format('woff'),
-		url('fuentes/icomoon.ttf?5s0ze6') format('truetype'),
-		url('fuentes/icomoon.svg?5s0ze6#icomoon') format('svg');
+	src:url('fuentes/icomoon.eot?gjq8fp');
+	src:url('fuentes/icomoon.eot?#iefixgjq8fp') format('embedded-opentype'),
+		url('fuentes/icomoon.woff?gjq8fp') format('woff'),
+		url('fuentes/icomoon.ttf?gjq8fp') format('truetype'),
+		url('fuentes/icomoon.svg?gjq8fp#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -32,34 +34,43 @@
 	text-transform: none;
 	line-height: 1;
 
-	/* Better Font Rendering =========== 
+	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-f-arriba:before {
-	content: "\e600";
-}
-
 .icon-f-abajo:before {
-	content: "\e601";
+	content: "\f05b";
+	color: #DD4F24;
 }
 
-.icon-estrella:before {
-	content: "\e602";
+.icon-f-arriba:before {
+	content: "\f0aa";
 }
 
 .icon-lapiz:before {
-	content: "\e905";
-}*/
+	content: "\e908";
+	margin-right: 0.5em;
+}
 
-
+.icon-estrella:before {
+	content: "\e9d9";
+	/*color: #FFBE2C;*/
+	margin-right: 0.5em;
+	/*margin-top: 0.1em*/
+	position: relative;
+	top: 0.1em;
+}
 
 
 /*Diseño*/
 a
 {
 	color: #20BCE0;
+}
+aside
+{
+	display: none;
 }
 body
 {
@@ -69,10 +80,10 @@ body
 }
 footer
 {
-	color: rgba(255,255,255,0.7);
 	background: #20BCE0;
-	text-align: center;
+	color: rgba(255,255,255,0.7);
 	padding: 1em;
+	text-align: center;
 }
 footer p:first-child
 {
@@ -106,7 +117,7 @@ header h1
 {
 	font-size: 1.2em;
 	font-weight: normal;
-	margin: 0.2em 70px 0 0;
+	margin: 0 70px 0 0;
 }
 header #avatar
 {
@@ -120,29 +131,72 @@ header #avatar img
 	border-radius: 50%;
 	width: 55px;
 }
-header #logo img
+header #logo
 {
 	border-right: 1px solid white;
-	margin-right: 0.5em;
 	padding-right: 0.5em;
+	margin-right: 0.5em;
+}
+header #logo img
+{
+	/*margin-right: 0.5em;
+	padding-right: 0.5em;*/
+	transition: 1s;
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	-o-transition: 1s;
+	-ms-transition: 1s;
 	width: 52px;
+
+}
+header #logo img:hover
+{
+	transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-o-transform: rotate(360deg);
+	-ms-transform: rotate(360deg);
 }
 nav
 {
-	background: #80BCA3;
-	padding: 0 0.5em;
+	background: #5B8BCD; /*#80BCA3*/
+	/*box-shadow: rgba(0,0,0,0.5) 0px 0px 10px;
+	padding: 0 6em 0 0;*/
 	position: relative;
 }
 nav ul 
 {
 	list-style: none;
 	margin: 0;
-	padding: 0;
+	padding: 0 6em 0 0.5em;
+}
+nav ul li
+{
+	display: inline-block;
+	margin: 0 0.5em 0 0;
+}
+nav ul li a 
+{
+	color: white;
+	display: block;
+	padding: 0.5em; 
+	text-decoration: none;
+
+	transition: 0.3s;
+	-webkit-transition: 0.3s;
+	-moz-transition: 0.3s;
+	-o-transition: 0.3s;
+	-ms-transition: 0.3s;
+
+}
+nav ul li a:hover
+{
+	background: #344B54;
 }
 nav ul #publicar_nav
 {
 	position: absolute;
-	top: -0.3em;
+	top: -0.1em;
 	right: 0;
 }
 nav ul #publicar_nav a
@@ -151,21 +205,39 @@ nav ul #publicar_nav a
 	 border-radius: 5px;
 	 box-shadow: rgba(0,0,0,0.5) 5px 5px 20px;
 	 font-style: italic;
-	 padding: 0.8em 0.5em;
-	 text-decoration: none;
+	 /*padding: 0.8em 0.5em 0.8em 2.5em;*/
+	 padding: 0.6em 0.8em;
+	 /*text-decoration: none;*/
 	 text-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
 }
-nav ul li
+nav ul #publicar_nav a:hover
 {
-	display: inline-block;
-	margin: 0 1em 0 0;
+	box-shadow: 0 0 30px yellow;
 }
-nav ul li a 
+nav ul #publicar_nav a.disabled
 {
-	color: white;
-	display: block;
-	padding: 0.5em 0; 
+	background-color: grey;
+	cursor: default;
+	box-shadow: none;
 }
+/*nav ul #publicar_nav a:before
+{
+	position: absolute;
+	left: 0.5em;
+	top: 0.7em;
+}
+nav ul #publicar_nav a:hover:before
+{
+	color: red;
+	font-size: 20px;
+
+	/*transform: scale(1.2);
+	-webkit-transform: scale(1.2);
+	-moz-transform: scale(1.2);
+	-o-transform: scale(1.2);
+	-ms-transform: scale(1.2); No se puede escalar elementos before?
+}*/
+
 #contenido
 {
 	margin: 1em;
@@ -186,18 +258,19 @@ nav ul li a
 #contenido .item .datos_item
 {
 	margin: 1em 1em 0 0;
-	text-align: right;
+	/*text-align: right;*/
 }
 #contenido .item .datos_item .fecha_item
 {
 	color: #AAA;
+	float: right;
 }
 #contenido .item .datos_item .tag_item
 {
 	background: #F4502A;
 	border-radius: 0.5em;
 	color: white;
-	float: left;
+	/*float: left;*/
 	display: inline-block;
 	padding: 0.2em 0.5em;
 	text-decoration: none;
@@ -205,7 +278,8 @@ nav ul li a
 #contenido .item .imagen_item
 {
 	float: left;
-	margin: 0 1em 0 0;
+	/*margin: 0 1em 0 0;*/
+	margin-right: 1em;
 }
 #contenido .item .imagen_item img
 {
@@ -215,6 +289,7 @@ nav ul li a
 {
 	font-size: 1.2em;
 	font-style: italic;
+	margin-bottom: 0;
 	padding: 1em 1em 0 0;
 }
 #contenido .item .titulo_item a
@@ -226,15 +301,106 @@ nav ul li a
 {
 	background: white;
 	border-radius: 0 0 0.5em 0.5em;
-	left: 5%;
+	left: 3%;
 	margin-top: 3px;
-	padding: 0.2em 0.5em;
+	/*padding: 0.2em 0.5em;*/
+	padding: 0.5em, 1em;
 	position: absolute;
+	right: 3%;
 	top: 100%;
-	width: 90%
+	/*width: 90%*/
 }
+#contenido .item .votacion a
+{
+	text-decoration: none;
+}
+#contenido .item .votacion .guardar_item
+{
+	color: #FFBE2C;
+}
+/*Quita decoracion a texto uno por uno de los elementos*/
+#contenido .item .votacion .down
+{
+	/*text-decoration: none;*/
+	color: #DD4F24
+}
+#contenido .item .votacion .up
+{
+	/*text-decoration: none;*/
+	color: #22BC68;
+}
+/*Quita decoracion a texto de un grupo de elementos*/
+
 #contenido .item .votacion .comentarios_item,
 #contenido .item .votacion .guardar_item
 {
 	float: right;
 }
+
+/**
+*FORMULARIO
+*/
+.formulario
+{
+	text-align: right;
+	padding: 1em;
+	display: none;
+}
+.formulario input
+{
+	/*border: 1px solid #ccc;*/
+	border-radius: 5px;
+	padding: 0.2em 0.6em;
+}
+.formulario input[type="text"],
+.formulario input[type="url"]
+{
+	border: 1px solid #888;
+}
+.formulario input[type="submit"]
+{
+  background: #22BCE0;
+  border: 1px solid #22BCE0;
+  box-shadow: rgba(0,0,0,0.5) 5px 5px 20px;
+  color: white;
+  font-style: italic;
+  text-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
+}
+
+/*
+*Responsive Dising
+*/
+
+@media screen and (min-width: 800px)
+{
+	#contenido
+	{
+		overflow: hidden;
+	}
+	#contenido .item
+	{
+		float: left;
+		/*margin-right: 1%;*/
+		width: 49%;
+		/*display: inline-block;*/
+	}
+	#contenido .item:nth-child(odd)/*Selecciona los hijos impares Y para pares (even)*/
+	{
+		margin-right: 2%;
+	}
+}
+@media screen and (min-width: 1000px)
+{
+	aside
+	{
+		display: block;
+		float: right;
+		margin: 1em;
+		width: 20%;
+	}
+	aside video
+	{
+		width: 100%;
+	}
+}
+
